k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: url
  name: url-deployment
#  namespace: url
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url
  template:
    metadata:
      labels:
        app: url
    spec:
      containers:
        - image: rishikeshops/url-shortner
          name: url
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: url-service
  labels:
    app: url
#  namespace: url
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000
  selector:
    app: url
