k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kcert-ingress
  labels:
    kcert.dev/ingress: "managed"
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - kcert.rushikesh.me # Change the word agileguru.org to your domain name
    secretName: kcert-rushikesh.me # Change the word agileguru-org to your domain name
  rules:
  - host: kcert.rushikesh.me # Change the word agileguru.org to your domain name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-service # Should be a valid service
            port:
                number: 3000 # this should be
